--- a/impressum.html
+++ b/impressum.html
@@ -81,15 +81,16 @@
                 Impressum
             </h1>
             <h3>
-                Schulzentrum Ybbs an der Donau <br>
-                Schulring 1 und 6 <br>
+                DAPAX <br>
+                Tobias Dangl <br>
+                Kleingartensiedlung 1 <br>
                 3370 Ybbs an der Donau <br>
-                Tel.: 0 74 12 52 575-11 <br>
-                E-Mail: hak(at)sz-ybbs.ac.at <br>
-                www: www.sz-ybbs.ac.at <br>
+                Tel.: 0650 5742197 <br>
+                E-Mail: tobias.dangl@gmx.at <br>
+                www.dapax.s1n-a.at <br>
                 <br><br>
-                Alle Rechte an der Webseite und den Bildern liegen beim Schulzentrum Ybbs. 
-                Das Kopieren oder die Verwendung von Fotos oder Textausz&uuml;gen ist nur mit ausdr&uuml;cklicher Genehmigung des Schulzentrums gestattet.
+                Alle Rechte an der Webseite und den Bildern liegen bei Tobias Dangl. 
+                Das Kopieren oder die Verwendung von Fotos oder Textausz&uuml;gen ist nur mit ausdr&uuml;cklicher Genehmigung gestattet.
             </h3>
         </center></main>
     </body>
