--- a/datenschutz.html
+++ b/datenschutz.html
@@ -59,6 +59,10 @@
             }
 
             @media (max-width: 650px) {
+
+                a {
+                    color: white;
+                }
                 
                 main {
                     margin-top: 10vw;
