--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>
                 Wir sind Christiane & Sina, 2 Sch&uuml;lerinnen der Handelsakademie Ybbs an der Donau. 
                 Im Rahmen unserer Diplomarbeit zum Thema Kreislaufwirtschaft habe ich, Sina, die Aufgabe, das Upcycling von Baumaterialien f&uuml;r jeden einfach zu gestalten.
-                Desswegen habe ich eine Anleitung erstellt, mit der Jeder ganz einfach und g&uuml;nstig M&ouml;bel aus Paletten zu bauen.
+                Deswegen habe ich eine Anleitung erstellt, mit der jeder ganz einfach und g&uuml;nstig M&ouml;bel aus Paletten bauen kann.
                 Ich w&uuml;rde mich &uuml;ber einen Download meiner Anleitung sehr freuen :&#41;
             </h3>
         </center>
